--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix",
-    "seed": "ts-node -r tsconfig-paths/register scripts/seed.ts"
+    "seed": "ts-node -r tsconfig-paths/register scripts/seed.ts",
+    "generate-logo": "node scripts/generate-logo.js",
+    "generate-icons": "npm run generate-logo && node scripts/generate-icons.js"
   },
   "dependencies": {
     "@heroui/badge": "^2.2.12",
@@ -21,32 +24,42 @@
     "@heroui/link": "2.2.16",
     "@heroui/listbox": "2.3.18",
     "@heroui/navbar": "2.2.17",
+    "@heroui/react": "^2.7.8",
     "@heroui/select": "^2.4.19",
     "@heroui/snippet": "2.2.20",
     "@heroui/switch": "2.2.17",
     "@heroui/system": "2.4.15",
     "@heroui/theme": "2.4.15",
+    "@heroui/toast": "^2.0.9",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-label": "^2.1.7",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "clsx": "2.1.1",
     "dotenv": "^16.5.0",
     "framer-motion": "11.13.1",
     "intl-messageformat": "10.7.16",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.1",
     "next": "15.3.1",
+    "next-pwa": "^5.6.0",
     "next-themes": "0.4.6",
+    "nodemailer": "^7.0.3",
     "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "^3.25.41"
+    "react-hook-form": "^7.56.4",
+    "sharp": "^0.34.2",
+    "zod": "^3.25.45"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.8",
