--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.56.4",
     "sharp": "^0.34.2",
+    "simplex-noise": "^4.0.3",
     "zod": "^3.25.45"
   },
   "devDependencies": {
