--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node server.ts",
+    "dev:next": "next dev",
     "dev:turbo": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production ts-node server.ts",
     "lint": "eslint --fix",
     "seed": "ts-node -r tsconfig-paths/register scripts/seed.ts",
     "generate-logo": "node scripts/generate-logo.js",
@@ -42,6 +43,7 @@
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "clsx": "2.1.1",
     "dotenv": "^16.5.0",
     "framer-motion": "11.13.1",
@@ -60,6 +62,7 @@
     "react-hook-form": "^7.56.4",
     "sharp": "^0.34.2",
     "simplex-noise": "^4.0.3",
+    "uuid": "^11.1.0",
     "zod": "^3.25.45"
   },
   "devDependencies": {
@@ -73,6 +76,9 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
     "autoprefixer": "10.4.21",
