--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@heroui/theme": "2.4.15",
     "@heroui/toast": "^2.0.9",
     "@hookform/resolvers": "^5.0.1",
+    "@next/third-parties": "^15.3.3",
     "@radix-ui/react-label": "^2.1.7",
     "@react-aria/ssr": "3.9.8",
     "@react-aria/visually-hidden": "3.8.22",
