--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.1",
-    "next": "15.3.1",
+    "next": "^15.3.3",
     "next-pwa": "^5.6.0",
     "next-themes": "0.4.6",
     "nodemailer": "^7.0.3",
